@@ -35,6 +35,7 @@ __revision__ = "__FILE__ __REVISION__ __DATE__ __DEVELOPER__"
 
 import os.path
 
+import SCons.Defaults
 import SCons.Tool
 import SCons.Util
 
@@ -59,8 +60,8 @@ def generate(env):
     """Add Builders and construction variables for yacc to an Environment."""
     c_file, cxx_file = SCons.Tool.createCFileBuilders(env)
     
-    c_file.add_action('.y', '$YACCCOM')
-    cxx_file.add_action('.yy', '$YACCCOM')
+    c_file.add_action('.y', SCons.Defaults.YaccAction)
+    cxx_file.add_action('.yy', SCons.Defaults.YaccAction)
     c_file.add_emitter('.y', yEmitter)
     cxx_file.add_emitter('.yy', yyEmitter)
 
